--- a/Task-1/coke.html
+++ b/Task-1/coke.html
@@ -27,7 +27,7 @@
             <h1>Be Young, Have Fun, <br> <span>Drink Coke</span></h1>
             <p>Coca-Cola, or Coke, is a carbonated soft drink manufactured by the Coca-Cola Company.<br> Originally marketed as a temperance drink and intended as a patent medicine,<br> it was invented in the late 19th century by John Stith Pemberton in Atlanta, Georgia. 
             </p>
-            <button class="btn" id="btn3">Buy Now</button>
+            <button class="btn3" id="btn3">Buy Now</button>
            </div>
         <div class="coca" >
         <img src="1.webp" alt="" width="300" height="300" id = "coke">
