--- a/Task-3/temp.html
+++ b/Task-3/temp.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Convert Temperature</title>
-    <link rel="icon" type="image/png" href="image/icon.webp" />
+    <link rel="icon" type="image/png" href="./image/icon.webp" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -68,7 +68,7 @@
                       class="convertBtn btn btn-lg col-12 col-md-6 offset-md-3 mt-4 rounded-pill d-flex justify-content-center align-items-center text-white"
                     >
                       Convert&emsp;<img
-                        src="image/right.svg"
+                        src="./image/right.svg"
                         class="mt-1"
                         width="15px"
                         height="15px"
