--- a/Task-2/portfolio.html
+++ b/Task-2/portfolio.html
@@ -49,7 +49,7 @@
                 </div>
 
                 <div class="home__img">    
-                    <img src="image/hdi.png" alt="">
+                    <img src="./image/hdi.png" alt="">
                 </div>
             </section>
 
@@ -59,7 +59,7 @@
 
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="image/mobile-banner.png" alt="">
+                        <img src="./image/mobile-banner.png" alt="">
                     </div>
                     
                     <div>
@@ -128,7 +128,7 @@
                     </div>
                     
                     <div>              
-                        <img src="image/cod1.png" alt="" class="skills__img">
+                        <img src="./image/cod1.png" alt="" class="skills__img">
                     </div>
                 </div>
             </section>
@@ -139,22 +139,22 @@
 
                 <div class="work__container bd-grid">
                     <div class="work__img">
-                        <img src="image/1.jpg" alt="">
+                        <img src="./image/1.jpg" alt="">
                     </div>
                     <div class="work__img">
-                        <img src="image/2.jpg" alt="">
+                        <img src="./image/2.jpg" alt="">
                     </div>
                     <div class="work__img">
-                        <img src="image/3.jpg" alt="">
+                        <img src="./image/3.jpg" alt="">
                     </div>
                     <div class="work__img">
-                        <img src="image/4.jpg" alt="">
+                        <img src="./image/4.jpg" alt="">
                     </div>
                     <div class="work__img">
-                        <img src="image/5.jpg" alt="">
+                        <img src="./image/5.jpg" alt="">
                     </div>
                     <div class="work__img">
-                        <img src="image/6.jpg" alt="">
+                        <img src="./image/6.jpg" alt="">
                     </div>
                 </div>
             </section>
